--- a/src/css/Default.sass
+++ b/src/css/Default.sass
@@ -2106,6 +2106,11 @@ div.container-fluid
   position: relative
   text-align: center
 
+.bottom 
+  position: absolute
+  bottom: 3%
+  right: 110px
+
 .vertical 
   margin: 0
   position: absolute
@@ -3129,6 +3134,11 @@ body
 
 .widthCardProveedor
   width: 270px
+  height: 400px
+
+.claseImagenCatalogo
+  width: 255px
+  // height: 255px
 
 .centradoRelativo
   position: absolute
