--- a/src/css/Default.sass
+++ b/src/css/Default.sass
@@ -323,6 +323,8 @@ body
 .abajo
   vertical-align: bottom
 
+.lineaEnmedio
+  text-decoration: line-through
 
 // LINKS Y OTROS
 .linkSF
@@ -766,7 +768,7 @@ body
 .h100
     height: 100%
 .w100
-    width: 100%
+    width: 100% !important
 .w75
     width: 75%
 .w50
@@ -2108,8 +2110,10 @@ div.container-fluid
 
 .bottom 
   position: absolute
-  bottom: 3%
-  right: 95px
+  bottom: 0%
+  // right: 88px
+  left: 50%
+  transform: translate(-50%, -50%)
 
 .vertical 
   margin: 0
@@ -3145,7 +3149,12 @@ body
   top: 50%
   left: 50%
   transform: translate(-50%, -50%)
-  padding-top: 102px
+
+.centradoRelativo2
+  position: absolute
+  top: 50%
+  left: 40%
+  transform: translate(-50%, -50%)
 
 
 .paddingFinalPerfil
@@ -3580,3 +3589,6 @@ body
 
 .descripcion
   white-space: pre-wrap
+
+.tImagenID
+  width: 350px
