--- a/src/css/Default.sass
+++ b/src/css/Default.sass
@@ -613,10 +613,10 @@ body
   font-weight: bold !important
   &:active
     background: $blanco !important
-    opacity: $opacity !important
+    opacity: $gris !important
   &:hover
-    background: $rojo !important
-    color: $blanco !important
+    background: $blanco !important
+    color: $gris !important
 /*azul*/
 .botonBlanco1
   background: $blanco !important
