estoy haciendo el editar centrado relativo

--- a/src/css/Default.sass
+++ b/src/css/Default.sass
@@ -2105,8 +2105,8 @@ div.container-fluid
   right: 12px
 
 .contenedor 
-  position: relative
-  text-align: center
+  position: relative !important
+  text-align: center !important
 
 .bottom 
   position: absolute
@@ -3137,18 +3137,21 @@ body
     background: $negrohover
 
 .widthCardProveedor
-  width: 230px
-  height: 360px
+  width: 230px !important
+  height: 360px !important
+
+.widthCardProveedorCol
+  width: 230px !important
+  height: 370px !important
 
 .claseImagenCatalogo
   width: 210px
   // height: 255px
 
 .centradoRelativo
-  position: absolute
-  top: 50%
-  left: 50%
-  transform: translate(-50%, -50%)
+  top: 50% !important
+  left: 50% !important
+  transform: translate(-50%, -50%) !important
 
 .centradoRelativo2
   position: absolute
