--- a/src/css/Default.sass
+++ b/src/css/Default.sass
@@ -1957,7 +1957,7 @@ div.container-fluid
     padding: 0px 
     margin: 0px 
     
-.letraChicaInput3
+.letraChicaInput
   font-size: 16px !important
   padding: .4em !important
   height: 2em !important
@@ -3540,6 +3540,21 @@ body
     opacity: $opacity !important
   &:hover
     background: $azulobscuro !important
+
+.botonInputAmarillo
+  font-size: 14px !important
+  padding: 0px !important
+  height: 35px !important
+  width: 35px
+  background: $amarillo !important
+  border-color: $amarillo !important
+  color: $blanco  !important
+  font-weight: bold !important
+  &:active
+    background: $amarillo !important
+    opacity: $opacity !important
+  &:hover
+    background: $amarilloobscuro !important
 
 .botonInputVerde
   font-size: 14px !important
