--- a/src/css/Default.sass
+++ b/src/css/Default.sass
@@ -3556,6 +3556,21 @@ body
   &:hover
     background: $amarilloobscuro !important
 
+.botonInputRojo
+  font-size: 14px !important
+  padding: 0px !important
+  height: 35px !important
+  width: 35px
+  background: $rojo !important
+  border-color: $rojo !important
+  color: $blanco  !important
+  font-weight: bold !important
+  &:active
+    background: $rojo !important
+    opacity: $opacity !important
+  &:hover
+    background: $rojoobscuro !important
+
 .botonInputVerde
   font-size: 14px !important
   padding: 0px !important
