--- a/src/css/Default.sass
+++ b/src/css/Default.sass
@@ -2741,20 +2741,6 @@ div.container-fluid
   margin-left: -2px
   margin-right: -2px
 
-.botonAmarilloComentario
-  background: $amarillo  !important
-  border-color: $amarilloclaro !important
-  color: $blanco !important
-  font-weight: bold !important
-  padding-top: 2px !important
-  padding-bottom: 4px !important
-  padding-left: 8px !important
-  padding-right: 7px !important
-  &:active
-    background: $amarillo !important
-    opacity: $opacity !important
-  &:hover
-    background: $amarilloobscuro !important
 
 .botonRojoComentario
   background: $rojo  !important
@@ -2785,6 +2771,21 @@ div.container-fluid
     opacity: $opacity !important
   &:hover
     background: $verdeobscuro !important
+
+.botonAzulComentario
+  background: $azul  !important
+  border-color: $azulclaro !important
+  color: $blanco !important
+  font-weight: bold !important
+  padding-top: 1px !important
+  padding-bottom: 3px !important
+  padding-left: 8px !important
+  padding-right: 7px !important
+  &:active
+    background: $azul !important
+    opacity: $opacity !important
+  &:hover
+    background: $azulobscuro !important
 
 .botonAmarilloComentario
   background: $amarillo  !important
