--- a/src/css/Default.sass
+++ b/src/css/Default.sass
@@ -2790,7 +2790,7 @@ div.container-fluid
 .botonAmarilloComentario
   background: $amarillo  !important
   border-color: $amarilloclaro !important
-  color: $blanco !important
+  color: $azul !important
   font-weight: bold !important
   padding-top: 1px !important
   padding-bottom: 3px !important
@@ -2801,6 +2801,21 @@ div.container-fluid
     opacity: $opacity !important
   &:hover
     background: $amarilloobscuro !important
+
+.botonBlancoComentario
+  background: $blanco  !important
+  border-color: $blanco !important
+  color: $azul !important
+  font-weight: bold !important
+  padding-top: 1px !important
+  padding-bottom: 3px !important
+  padding-left: 8px !important
+  padding-right: 7px !important
+  &:active
+    background: $blanco !important
+    opacity: $opacity !important
+  &:hover
+    background: $blanco !important
 
 .lchica
   width: 100%
