cambios varios, compras, comentario estado, modelado

--- a/src/css/Default.sass
+++ b/src/css/Default.sass
@@ -770,9 +770,9 @@ body
 .w100
     width: 100% !important
 .w75
-    width: 75%
+    width: 75% !important
 .w50
-    width: 50%
+    width: 50% !important
 .circulo
     border-radius: 50%
 
@@ -3502,16 +3502,19 @@ body
   padding: 2px 2px 2px 10px !important
 
 .overflow 
-  @media (min-width: 991px)
-    height: calc(100vh - 294px)
-    overflow-y: auto
-    overflow-x: hidden
+  height: calc(95vh - 294px)
+  overflow-y: auto
+  overflow-x: hidden
 
-.overflowCategorias
-  @media (min-width: 991px)
-    height: calc(100vh - 355px)
-    overflow-y: auto
-    overflow-x: hidden
+.overflowTicket
+  height: calc(102vh - 355px)
+  overflow-y: auto
+  overflow-x: hidden
+
+.overflowCompras
+  height: calc(103vh - 355px)
+  overflow-y: auto
+  overflow-x: hidden
 
 .botonInputLugarAzul
   font-size: 14px !important
