--- a/src/css/Default.sass
+++ b/src/css/Default.sass
@@ -3652,6 +3652,11 @@ body
   @media (min-width: 500px)
     width: 350px
 
+.tImagenEditar
+  width: 200px
+  @media (min-width: 500px)
+    width: 250px
+
 input::-webkit-outer-spin-button
 input::-webkit-inner-spin-button
     -webkit-appearance: none !important
