--- a/src/css/Default.sass
+++ b/src/css/Default.sass
@@ -854,6 +854,22 @@ div.container-fluid
     margin-left: 10px
     border-radius: 4px
 
+.navHighlightAzulMenu
+  color: $amarilloobscuro !important
+  padding-right: 5px
+  padding-left: 20px
+  text-decoration: none
+  &:hover 
+    color: $azulclaro !important
+  &:active
+    color: $azulclaro !important
+  @media (max-width: 767px)
+    padding-bottom: 5px !important
+    top: 91px
+    height: 45px
+    margin-left: 10px
+    border-radius: 4px
+
 .pabMenu
   @media (max-width: 767px)
     padding-bottom: 17px
