subir cambios en editar id

--- a/src/css/Default.sass
+++ b/src/css/Default.sass
@@ -3669,9 +3669,12 @@ body
     width: 350px
 
 .tImagenEditar
-  width: 200px
+  // width: 200px
+  width: 100%
   @media (min-width: 500px)
-    width: 250px
+    width: 100%
+  @media (min-width: 768px)
+    width: 350px
 
 input::-webkit-outer-spin-button
 input::-webkit-inner-spin-button
