subir cambios en editar id

--- a/src/css/Default.sass
+++ b/src/css/Default.sass
@@ -3177,8 +3177,9 @@ body
   height: 370px !important
 
 .claseImagenCatalogo
+  object-fit: cover
   width: 210px
-  // height: 255px
+  height: 210px
 
 .centradoRelativo
   top: 50% !important
@@ -3664,17 +3665,25 @@ body
   white-space: pre-wrap
 
 .tImagenID
+  object-fit: cover
   width: 300px
+  height: 300px
   @media (min-width: 500px)
     width: 350px
+    height: 350px
 
 .tImagenEditar
-  // width: 200px
-  width: 100%
+  object-fit: cover
+  width: 300px
+  height: 300px
+  // width: 100%
   @media (min-width: 500px)
-    width: 100%
+    // width: 100%
+    width: 300px
+    height: 300px
   @media (min-width: 768px)
     width: 350px
+    height: 350px
 
 input::-webkit-outer-spin-button
 input::-webkit-inner-spin-button
