costo_envio activa y varias funcionalidades nuevas del producto

--- a/src/css/Default.sass
+++ b/src/css/Default.sass
@@ -2593,6 +2593,7 @@ div.container-fluid
       color: $negro
 
 .productoLista
+  object-fit: cover
   width: 65px
   max-height: 65px
   @media (min-width: 576px)
@@ -3427,7 +3428,7 @@ body
 .t13
   font-size: 13px
 .t14
-  font-size: 14px
+  font-size: 14px !important
 .t15
   font-size: 15px
 .t16
