--- a/src/css/Default.sass
+++ b/src/css/Default.sass
@@ -3733,10 +3733,10 @@ input::-webkit-inner-spin-button
     right: 18%
     
 .overlayImagenEditar
-  background: black
-  opacity: 20%
+  background: black !important
+  opacity: 20% !important
   border-radius: 10px
-  position: absolute
+  position: absolute !important
   left: 3%
   width: 300px
   height: 300px
