--- a/src/css/Default.sass
+++ b/src/css/Default.sass
@@ -3734,7 +3734,7 @@ input::-webkit-inner-spin-button
     
 .overlayImagenEditar
   background: black !important
-  opacity: 20% !important
+  opacity: .15 !important
   border-radius: 10px
   position: absolute !important
   left: 3%
