--- a/src/css/Default.sass
+++ b/src/css/Default.sass
@@ -537,15 +537,14 @@ body
     color: $negro  !important
 
 .botonRojo
-  background: $rojo !important
-  border-color: $rojoclaro !important
+  background: $rojoobscuro !important
+  border-color: $rojo !important
   color: $blanco  !important
   font-weight: bold !important
   &:active
-    background: $rojo  !important
     opacity: $opacity  !important
   &:hover
-    background: $rojoobscuro  !important
+    opacity: $opacity  !important
 
 .botonRojoClaro
   background: $rojoclaro !important
