solicitar producto fanny

--- a/src/css/Default.sass
+++ b/src/css/Default.sass
@@ -1656,6 +1656,11 @@ div.container-fluid
   left: 50%
   transform: translate(-50%, -50%)
 
+.centradoEnmedio
+  position: absolute
+  left: 50%
+  transform: translate(-50%)
+
 .centradoIcono
   position: relative
   top: 2px
@@ -3773,3 +3778,6 @@ input::-webkit-inner-spin-button
     left: 79px
     width: 350px
     height: 350px
+    
+.productosSolicitados
+  width: 280px !important
