imagenes chicas, fuse mejorado, carga ligera

--- a/src/css/Default.sass
+++ b/src/css/Default.sass
@@ -3185,7 +3185,7 @@ body
 
 .claseImagenCatalogo
   border-radius: 5px
-  object-fit: cover
+  object-fit: contain
   width: 210px
   height: 210px
 
@@ -3673,7 +3673,7 @@ body
   white-space: pre-wrap
 
 .tImagenID
-  object-fit: cover
+  object-fit: contain
   width: 300px
   height: 300px
   border-radius: 10px
@@ -3682,7 +3682,7 @@ body
     height: 350px
 
 .tImagenEditar
-  object-fit: cover
+  object-fit: contain
   width: 300px
   height: 300px
   border-radius: 10px
