--- a/src/css/Default.sass
+++ b/src/css/Default.sass
@@ -3546,6 +3546,11 @@ body
   overflow-y: auto
   overflow-x: hidden
 
+.overflowProductosCompra
+  height: calc(90vh - 294px)
+  overflow-y: auto
+  overflow-x: hidden
+
 .botonInputLugarAzul
   font-size: 14px !important
   padding: 0px !important
