--- a/src/css/Default.sass
+++ b/src/css/Default.sass
@@ -3569,6 +3569,14 @@ body
   @media (min-width: 992px)
     height: calc(79vh - 100px)
 
+.overflowActivos
+  height: calc(50vh)
+  overflow-y: auto
+  overflow-x: hidden
+  // lg
+  @media (min-width: 992px)
+    height: calc(79vh - 100px)
+
 .botonInputLugarAzul
   font-size: 14px !important
   padding: 0px !important
