--- a/src/css/Default.sass
+++ b/src/css/Default.sass
@@ -3210,6 +3210,11 @@ body
   left: 40%
   transform: translate(-50%, -50%)
 
+.paddingIos
+  /* CSS specific to iOS devices */ 
+  @supports (-webkit-touch-callout: none)
+    padding-top: 170px  
+
 
 .paddingFinalPerfil
   padding-top: 100px
