intento ios precio

--- a/src/css/Default.sass
+++ b/src/css/Default.sass
@@ -2147,6 +2147,14 @@ div.container-fluid
   left: 50%
   transform: translate(-50%, -50%)
 
+.bottomIOS
+  position: absolute
+  bottom: 0%
+  left: 50%
+  transform: translate(-50%, -50%)
+  @supports (-webkit-touch-callout: none)
+    bottom: 170px
+
 .vertical 
   margin: 0
   position: absolute
