intento ios precio

--- a/src/css/Default.sass
+++ b/src/css/Default.sass
@@ -3453,7 +3453,7 @@ body
 .t11
   font-size: 11px
 .t12
-  font-size: 12px
+  font-size: 12px !important
 .t13
   font-size: 13px
 .t14
@@ -3826,3 +3826,14 @@ input::-webkit-inner-spin-button
     
 .productosSolicitados
   width: 280px !important
+
+.tCategoria
+  font-size: 12px !important
+  @media (min-width: 380px)
+    font-size: 13px !important
+  @media (min-width: 400px)
+    font-size: 14px !important
+  @media (min-width: 430px)
+    font-size: 15px !important
+  @media (min-width: 460px)
+    font-size: 16px !important
