--- a/src/css/Default.sass
+++ b/src/css/Default.sass
@@ -3837,3 +3837,18 @@ input::-webkit-inner-spin-button
     font-size: 15px !important
   @media (min-width: 460px)
     font-size: 16px !important
+
+.tIconoCategoria
+  line-height: 1
+  height: 100%
+  vertical-align: middle
+  margin-top: -4px
+  font-size: 9px !important
+  @media (min-width: 380px)
+    font-size: 10px !important
+  @media (min-width: 400px)
+    font-size: 11px !important
+  @media (min-width: 430px)
+    font-size: 12px !important
+  @media (min-width: 460px)
+    font-size: 13px !important
