--- a/src/css/Default.sass
+++ b/src/css/Default.sass
@@ -117,6 +117,9 @@ body
 .amarilloObscuro
   color: $amarilloobscuro !important
 
+.naranja
+  color: #fd9800 !important
+
 .cafe
   color: $cafe !important
 .cafeClaro
