solicitar productos a almighty

--- a/src/css/Default.sass
+++ b/src/css/Default.sass
@@ -3204,6 +3204,22 @@ body
   width: 230px !important
   height: 370px !important
 
+.widthCardAlmighty
+  width: 230px !important
+  height: 380px !important
+
+.widthCardAlmightyCol
+  width: 230px !important
+  height: 390px !important
+
+.widthCardAlmighty2
+  width: 230px !important
+  height: 300px !important
+
+.widthCardAlmightyCol2
+  width: 230px !important
+  height: 310px !important
+
 .claseImagenCatalogo
   border-radius: 5px
   object-fit: contain
