yelitos tasks terminado version 1.0

--- a/src/css/Default.sass
+++ b/src/css/Default.sass
@@ -8,9 +8,9 @@ $grisclaro3:   #F7F7F7
 $grisclaro4:   #e6e6e6
 $grisobscuro: #5f5457
 
-$azul:        rgb(22, 2, 136)
+$azul:        rgb(0, 194, 228)
 $azulclaro:   #d5eaf6
-$azulobscuro: #215B7C
+$azulobscuro: #006ead
 
 $rojo:        #EA4435
 $rojoclaro:   #fad4d1
@@ -587,7 +587,7 @@ body
 .botonAmarillo
   background: $amarillo  !important
   border-color: $amarillo !important
-  color: $azul !important
+  color: $negro !important
   font-weight: bold !important
   &:active
     opacity: $opacity !important
@@ -623,7 +623,7 @@ body
 .botonBlanco
   background: $blanco !important
   border: none !important
-  color: $negro !important
+  color: $azul !important
   font-weight: bold !important
   &:active
     background: $blanco !important
